New update + bug fix

--- a/Application Code/options.ini
+++ b/Application Code/options.ini
@@ -17,3 +17,8 @@ windowWidth = false
 ;Window Console will be in what state (maximized, minimized)
 
 windowState = normal
+
+;Disable Update Warnings and Disable Updates overall
+
+UpdatesDisabled = false
+UpdateErrorWarningsDisabled = false
