New UNFINISHED update

--- a/Application Code/options.ini
+++ b/Application Code/options.ini
@@ -22,3 +22,7 @@ windowState = normal
 
 UpdatesDisabled = false
 UpdateErrorWarningsDisabled = false
+
+
+; ==== HIDDEN SETTINGS ====
+;You may the developer settings here... some of the settings are good, others may just be bad
