ADDED DOCUMENTATION!!! (in almost each code file)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/bin/Debug/net5.0/Easy14 Coding Language.dll",
-            "args": [],
+            "args": ["-run", "C:\\Users\\mervi\\Desktop\\testA.e14"],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "externalTerminal",
