Fixed many things

--- a/Application Code/options.ini
+++ b/Application Code/options.ini
@@ -26,3 +26,5 @@ UpdateErrorWarningsDisabled = false
 
 ; ==== HIDDEN SETTINGS ====
 ;You may the developer settings here... some of the settings are good, others may just be bad
+
+turnOnDeveloperOptions = true
