--- a/Easy14_Programing_language.csproj
+++ b/Easy14_Programing_language.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Easy14_Programing_language</RootNamespace>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <ApplicationIcon>Images\appIcon.ico</ApplicationIcon>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +19,7 @@
     <Content Include=".vscode\launch.json" />
     <Content Include=".vscode\settings.json" />
     <Content Include=".vscode\tasks.json" />
+    <Content Include="Images\appIcon.ico" />
   </ItemGroup>
 
   <ItemGroup>
