--- a/Easy14_Programming_language.csproj
+++ b/Easy14_Programming_language.csproj
@@ -11,6 +11,7 @@
     <Copyright>Mervinpaismakeswindows14</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
