--- a/Easy14_Programming_Language.csproj
+++ b/Easy14_Programming_Language.csproj
@@ -71,4 +71,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Functions\Audio\" />
+    <Folder Include="Functions\NewFolder\" />
+  </ItemGroup>
+
 </Project>
