--- a/Easy14_Programming_Language.csproj
+++ b/Easy14_Programming_Language.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
     <None Include=".github\ISSUE_TEMPLATE\bug_report.md" />
   </ItemGroup>
 
