--- a/Application Code/options.ini
+++ b/Application Code/options.ini
@@ -1,6 +1,6 @@
 [Code-Interperator-Options]
-; For code statements if you like to code with/without semicolons
-needSemicolons = true
+; Unused since explicit is better than implicit so :/
+; needSemicolons = true
 
 ;If you wanted a delay when starting the program, kinda useless
 delay = 1
