fixed stuff, removed summarys in the code

--- a/Easy14_Programming_language/Easy14_Programming_language.csproj
+++ b/Easy14_Programming_language/Easy14_Programming_language.csproj
@@ -11,7 +11,7 @@
     <Copyright>Mervinpaismakeswindows14</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
