--- a/easy14_isdi/easy14_isde.csproj
+++ b/easy14_isdi/easy14_isde.csproj
@@ -63,6 +63,7 @@
     </Compile>
     <EmbeddedResource Include="Main_Editor.resx">
       <DependentUpon>Main_Editor.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
