Added Installer for the project

--- a/Easy14_Programming_language/Easy14_Programming_language.csproj
+++ b/Easy14_Programming_language/Easy14_Programming_language.csproj
@@ -68,6 +68,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Application Code\currentVersion.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Application Code\options.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
