--- a/Easy14_Programming_language/Easy14_Programming_language.csproj
+++ b/Easy14_Programming_language/Easy14_Programming_language.csproj
@@ -64,7 +64,12 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Sayers.SDL2.Core" Version="1.0.11" />
     <PackageReference Include="System.Windows.Extensions" Version="6.0.0" />
-    <!--<PackageReference Include="Z.Expressions.Eval" Version="4.0.87" />-->
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Functions\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
