Main changes; Made it so Easy14 exits on finished executing code, and made the Isdi much better

--- a/Easy14_Programming_language/Properties/launchSettings.json
+++ b/Easy14_Programming_language/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "profiles": {
     "Easy14_Programming_Language": {
       "commandName": "Project"
+    },
+    "Exit Test": {
+      "commandName": "Project",
+      "commandLineArgs": "\"C:\\Users\\mervi\\Documents\\test.e14\"\r\n"
     }
   }
 }
