Main Changes; Updated the UI and fixed some bugs, plus better font changer and word wrap toggle and more!

--- a/easy14_isdi/easy14_isde.csproj
+++ b/easy14_isdi/easy14_isde.csproj
@@ -113,5 +113,8 @@
   <ItemGroup>
     <None Include="Resources\keep-calm-its-not-finished-yet.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mervin14_icon_titled.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
