Main Changes; Apparently input used the old method of variable storing and getting so :facepalm: We added a for loop :D (only for numbers, but still very useful)

--- a/Easy14_Programming_language/Properties/launchSettings.json
+++ b/Easy14_Programming_language/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     },
     "Exit Test": {
       "commandName": "Project",
-      "commandLineArgs": "\"C:\\Users\\mervi\\Desktop\\e.14.e14\"\r\n"
+      "commandLineArgs": "\"C:\\Users\\mervi\\Desktop\\for test.e14\""
     }
   }
 }
